Revision history for Perl module group Pod::Perldoc
                                        Time-stamp: "2008-04-22 15:21:46 BRT"

2008-04-22
        * Development release 3.14_05 -- Search perlvar
        * Applied patch to allow -A for searching perlvar.
          (after a patch by Ovid, 2008-02-26)
	
        * [RFC] the switch name is experimental: I am open
	  to convincing alternatives (other than -v and -V 
	  which are already taken).
	
2008-04-16
	* Development release 3.14_04
	* 'lib' & co. are added to search path if -f Build.PL
	  in current directory (rt.cpan.org #33941)
        * bug fix: 'blib' directories were never searched 
	  because they were tested with -f
	
2007-09-03
	* Development release 3.14_03
	* typo fix (#31763 by rgs)
	* warning and debugging code added to add_translator()
	* the translators now became objects
	* POD2::Base (if available) provides language-specific
	  support for free
        * experimental releases, misses documentation of changes
	
2007-08-23
	* Development release 3.14_02
	* -L becomes more forgiving:
              $ perldoc -L it perldocpage
	  retrieves the standard (English) version if it cannot find
	  the Italian translation.
	* applied to bleed as Change #31762
	
2007-08-23
	* Release 3.14_01 -- bleedperl changes:
	+ #31628: a Gentoo patch
	+ #27878: warn when -f, -q ignore extra arguments
	+ #26202: document -L
	+ #26191: new switch -L
	
2004-11-30  Sean M. Burke  sburke@cpan.org
	* Release 3.14 -- bugfix for Cygwin

	* Matt Johnson sends in two patches to accomodate Cygwin.
	Accepted.

	* Also changing pathsep for IS_MSWin32 || IS_Dos temp files
	from '/' to '\'.

2004-04-09  Sean M. Burke  sburke@cpan.org
	* Release 3.13 -- minor bugfixes

	Ken Willians notes that Pod::Perldoc::ToMan breaks when the
	pod2man program isn't in $Config{'scriptdirexp'}.  So I make it
	look there first, but then fall back to not specifying where it
	should be found.
