@@ -8,12 +8,10 @@ use ExtUtils::MakeMaker;
 
 my $EUMM_VERSION = $ExtUtils::MakeMaker::VERSION;
 
-# See lib/ExtUtils/MakeMaker.pm for details of how to influence
-# the contents of the Makefile that is written.
 WriteMakefile(
     'NAME'	=> 'Pod::Perldoc',
-    'VERSION_FROM' => 'lib/Pod/Perldoc.pm', # finds $VERSION
-    'ABSTRACT'  => 'look up Perl documentation in Pod format',
+    'VERSION_FROM' => 'lib/Pod/Perldoc.pm',
+    'ABSTRACT'  => 'Look up Perl documentation in Pod format',
     'EXE_FILES' => [qw( perldoc )],
 
     ($] >= 5.008001 ? ( 'INSTALLDIRS'  => 'perl' ) : ()),
